fixed bug where pokemonslist div would overflow over the html body

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ ul{
 body{
     height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     font-family: 'Roboto', sans-serif;
